--- a/Week1.ipynb
+++ b/Week1.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -283,18 +283,9 @@
       "3\n",
       "{'Harvard': 'USA'}\n",
       "{'Harvard': 'USA', 'SKKU': 'South Korea'}\n",
-      "dict[[('apple', 3), ('banana', 4), ('orange', 1), ('pear', 4)]]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "argument of type 'types.GenericAlias' is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [84], line 30\u001b[0m\n\u001b[1;32m     27\u001b[0m dict_3 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m[listOfTuples]                     \u001b[38;5;66;03m#Convert LIST of TUPLES to DICTIONARY\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28mprint\u001b[39m(dict_3)\n\u001b[0;32m---> 30\u001b[0m \u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mapple\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdict_3\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: argument of type 'types.GenericAlias' is not iterable"
+      "True\n",
+      "True\n",
+      "['apple', 'banana', 'orange', 'pear']\n"
      ]
     }
    ],
@@ -310,7 +301,7 @@
     "print(dict_1)\n",
     "\n",
     "##Dictionary Operations\n",
-    "print(dict_1['apple'])                          #Accessing values with keys; square brackets\n",
+    "print(dict_1['apple'])                          #Accessing element/values with keys; square brackets\n",
     "\n",
     "print(dict_1.keys())                            #Listing keys in dictionary\n",
     "\n",
@@ -325,11 +316,109 @@
     "dict_2['SKKU'] = 'South Korea'                  \n",
     "print(dict_2)\n",
     "\n",
-    "dict_3 = dict[listOfTuples]                     #Convert LIST of TUPLES to DICTIONARY\n",
-    "print(dict_3)\n",
+    "dict_3 = dict(listOfTuples)                     #Convert LIST of TUPLES into DICTIONARY\n",
     "\n",
-    "\"apple\" in dict_3"
+    "print('apple'  in dict_3)                       #Check if key in dictionary\n",
+    "print('cherry' not in dict_3)                   #Check if key not in dictionary\n",
+    "\n",
+    "print(list(dict_3))                             #Convert dictionary into list"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 4 3]\n",
+      "[[1 4 3]\n",
+      " [9 2 7]]\n",
+      "(2, 3)\n",
+      "6\n",
+      "[   1    2    3 ... 1997 1998 1999]\n",
+      "[0.5 1.  1.5 2.  2.5]\n",
+      "[1 2 3 4]\n",
+      "[3.         3.66666667 4.33333333 5.         5.66666667 6.33333333\n",
+      " 7.         7.66666667 8.33333333 9.        ]\n",
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n",
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]]\n",
+      "[1. 1. 1. 1.]\n",
+      "4\n",
+      "[4 3]\n",
+      "3\n",
+      "3\n",
+      "[3 7]\n",
+      "[[1 3]\n",
+      " [9 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Data Types - Numpy\n",
+    "###Numpy is a powerful N-dimensional array object that is important in scientific computing\n",
+    "\n",
+    "##Define and Assign Numpy Arrays\n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.array([1,4,3])                       #Sort of like lists\n",
+    "print(x)\n",
+    "\n",
+    "y = np.array([[1,4,3],[9,2,7]])             #Array inside an array\n",
+    "print(y)\n",
+    "\n",
+    "##Array Dimensions\n",
+    "print(y.shape)                              #Dimension of array\n",
+    "print(y.size)                               #Dimension of array\n",
+    "\n",
+    "##Array Operations\n",
+    "z = np.arange(1,2000,1)                     #Generate array from 1 to 1999 with interval of 1\n",
+    "print(z)\n",
+    "\n",
+    "j = np.arange(0.5, 3, 0.5)                  #Generate array from 0.5 to 2.5 with interval of 0.5\n",
+    "print(j)\n",
+    "\n",
+    "l = np.arange(1,5,)                         #Empty interval value is automatically 1\n",
+    "print(l)\n",
+    "\n",
+    "r = np.linspace(3,9,10)                     #Generate array from 3 to 9 into 10 numbers equally spaced out\n",
+    "print(r)\n",
+    "\n",
+    "print(np.zeros((3,5)))                      #Generate 3x5 array of zeros \n",
+    "\n",
+    "print(np.ones((5,3)))                       #Generate 5x3 array of ones\n",
+    "\n",
+    "print(np.ones(4))                           #Generate 1x4 array of ones\n",
+    "\n",
+    "##Accessing Array Indices\n",
+    "print(x[1])                                 #Access 2nd index of array just like a list\n",
+    "\n",
+    "print(x[1:])                                #Access all elements from 2nd index to the last\n",
+    "\n",
+    "print(x[-1])                                #Access last index of array\n",
+    "\n",
+    "print(y[0,2])                               #Access first row, second column\n",
+    "\n",
+    "print(y[:,-1])                              #Access all rows, last column; same as \n",
+    "\n",
+    "print(y[:,[0,2]])                            #Access all rows, but first and 3rd column\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
