--- a/Week1.ipynb
+++ b/Week1.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,27 @@
       "3\n",
       "[3 7]\n",
       "[[1 3]\n",
-      " [9 7]]\n"
+      " [9 7]]\n",
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "[[3 4]\n",
+      " [5 6]]\n",
+      "[[ 1  4]\n",
+      " [ 9 16]]\n",
+      "[[ 5 11]\n",
+      " [28 20]]\n",
+      "[[ 4 18]\n",
+      " [75 64]]\n",
+      "[[           1          512]\n",
+      " [847288609443   4294967296]]\n",
+      "[[ 4 25]\n",
+      " [ 9 16]]\n",
+      "[[2. 3.]\n",
+      " [5. 4.]]\n",
+      "[[False False]\n",
+      " [False  True]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n"
      ]
     }
    ],
@@ -369,48 +389,76 @@
     "##Define and Assign Numpy Arrays\n",
     "import numpy as np\n",
     "\n",
-    "x = np.array([1,4,3])                       #Sort of like lists\n",
-    "print(x)\n",
+    "array_1 = np.array([1,4,3])                       #Sort of like lists\n",
+    "print(array_1)\n",
     "\n",
-    "y = np.array([[1,4,3],[9,2,7]])             #Array inside an array\n",
-    "print(y)\n",
+    "array_2 = np.array([[1,4,3],[9,2,7]])             #Array inside an array\n",
+    "print(array_2)\n",
     "\n",
     "##Array Dimensions\n",
-    "print(y.shape)                              #Dimension of array\n",
-    "print(y.size)                               #Dimension of array\n",
+    "print(array_2.shape)                              #Dimension of array\n",
+    "print(array_2.size)                               #Dimension of array\n",
     "\n",
     "##Array Operations\n",
-    "z = np.arange(1,2000,1)                     #Generate array from 1 to 1999 with interval of 1\n",
-    "print(z)\n",
+    "array_3 = np.arange(1,2000,1)                     #Generate array from 1 to 1999 with interval of 1\n",
+    "print(array_3)\n",
     "\n",
-    "j = np.arange(0.5, 3, 0.5)                  #Generate array from 0.5 to 2.5 with interval of 0.5\n",
-    "print(j)\n",
+    "array_4 = np.arange(0.5, 3, 0.5)                  #Generate array from 0.5 to 2.5 with interval of 0.5\n",
+    "print(array_4)\n",
     "\n",
-    "l = np.arange(1,5,)                         #Empty interval value is automatically 1\n",
-    "print(l)\n",
+    "array_5 = np.arange(1,5,)                         #Empty interval value is automatically 1\n",
+    "print(array_5)\n",
     "\n",
-    "r = np.linspace(3,9,10)                     #Generate array from 3 to 9 into 10 numbers equally spaced out\n",
-    "print(r)\n",
+    "array_7 = np.linspace(3,9,10)                     #Generate array from 3 to 9 into 10 numbers equally spaced out\n",
+    "print(array_7)\n",
     "\n",
-    "print(np.zeros((3,5)))                      #Generate 3x5 array of zeros \n",
+    "arrayZero = np.zeros((3,5))\n",
+    "print(arrayZero)                                  #Generate 3x5 array of zeros \n",
     "\n",
-    "print(np.ones((5,3)))                       #Generate 5x3 array of ones\n",
+    "arrayOne = np.ones((5,3))\n",
+    "print(arrayOne)                                   #Generate 5x3 array of ones\n",
     "\n",
-    "print(np.ones(4))                           #Generate 1x4 array of ones\n",
+    "arrayOne_2 = np.ones(4)\n",
+    "print(arrayOne_2)                                 #Generate 1x4 array of ones\n",
     "\n",
     "##Accessing Array Indices\n",
-    "print(x[1])                                 #Access 2nd index of array just like a list\n",
+    "print(array_1[1])                                 #Access 2nd index of array just like a list\n",
     "\n",
-    "print(x[1:])                                #Access all elements from 2nd index to the last\n",
+    "print(array_1[1:])                                #Access all elements from 2nd index to the last\n",
     "\n",
-    "print(x[-1])                                #Access last index of array\n",
+    "print(array_1[-1])                                #Access last index of array\n",
     "\n",
-    "print(y[0,2])                               #Access first row, second column\n",
+    "print(array_2[0,2])                               #Access first row, second column\n",
     "\n",
-    "print(y[:,-1])                              #Access all rows, last column; same as \n",
+    "print(array_2[:,-1])                              #Access all rows, last column; same as \n",
     "\n",
-    "print(y[:,[0,2]])                            #Access all rows, but first and 3rd column\n",
-    "\n"
+    "print(array_2[:,[0,2]])                           #Access all rows, but first and 3rd column\n",
+    "\n",
+    "##Array Operations\n",
+    "array_8 = np.array([[1,2],[3,4]])                 #Define array\n",
+    "print(array_8)\n",
+    "\n",
+    "print(array_8 + 2)                                #Add 2 to all elements inside array\n",
+    "\n",
+    "print(array_8 ** 2)                               #Square all elements inside array\n",
+    "\n",
+    "array_9 = np.array([[4,9],[25,16]])               #Define array\n",
+    "\n",
+    "print(array_8 + array_9)                          #Add arrays\n",
+    "\n",
+    "print(array_8 * array_9)                          #Multiply arrays; NOTE: element by element, not mathematical multiplication\n",
+    "                                                  #Has to be the same dimension\n",
+    "\n",
+    "print(array_8 ** array_9)\n",
+    "\n",
+    "print(array_9.T)                                  #Transpose an array\n",
+    "\n",
+    "print(np.sqrt(array_9))                           #Square root of elements in array\n",
+    "\n",
+    "print(array_8 > 3)                                #Logical Expressions\n",
+    "print(array_8 < array_9)\n",
+    "\n",
+    "array_10 = array_9[array_9 > ]\n"
    ]
   },
   {
