--- a/Week1.ipynb
+++ b/Week1.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -365,6 +365,8 @@
       " [5 6]]\n",
       "[[ 1  4]\n",
       " [ 9 16]]\n",
+      "[[ 4  9]\n",
+      " [25 16]]\n",
       "[[ 5 11]\n",
       " [28 20]]\n",
       "[[ 4 18]\n",
@@ -378,7 +380,10 @@
       "[[False False]\n",
       " [False  True]]\n",
       "[[ True  True]\n",
-      " [ True  True]]\n"
+      " [ True  True]]\n",
+      "[25 16]\n",
+      "[[ 0  9]\n",
+      " [25 16]]\n"
      ]
     }
    ],
@@ -443,6 +448,7 @@
     "print(array_8 ** 2)                               #Square all elements inside array\n",
     "\n",
     "array_9 = np.array([[4,9],[25,16]])               #Define array\n",
+    "print(array_9)\n",
     "\n",
     "print(array_8 + array_9)                          #Add arrays\n",
     "\n",
@@ -458,7 +464,11 @@
     "print(array_8 > 3)                                #Logical Expressions\n",
     "print(array_8 < array_9)\n",
     "\n",
-    "array_10 = array_9[array_9 > ]\n"
+    "array_10 = array_9[array_9 > 10]                  #Choose elements with logical conditions\n",
+    "print(array_10)\n",
+    "\n",
+    "array_9[array_9 < 5] = 0                          #Assign a value to element based on logical condition\n",
+    "print(array_9)\n"
    ]
   },
   {
