--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -6,16 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Assignment 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import math\n",
+    "#Assignment 1\n",
+    "# #import math\n",
     "from math import factorial, sin, exp, log, cos, pi      #can import specific methods, so that you don't have to access math all the time"
    ]
   },
