--- a/Week1.ipynb
+++ b/Week1.ipynb
@@ -468,7 +468,8 @@
     "print(array_10)\n",
     "\n",
     "array_9[array_9 < 5] = 0                          #Assign a value to element based on logical condition\n",
-    "print(array_9)\n"
+    "print(array_9)\n",
+    "\n"
    ]
   },
   {
