--- a/Example Problems/ExamSampleProblems.ipynb
+++ b/Example Problems/ExamSampleProblems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,15 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "67\n",
-      "{'2018': 0.29850746268656714, '2019': 0.44776119402985076, '2020': 0.2537313432835821}\n"
+      "{'2018': 29.9, '2019': 44.8, '2020': 25.4}\n",
+      "{'2018': 33.3, '2019': 10.0, '2020': 23.3, '2021': 20.0, '2022': 13.3}\n"
      ]
     }
    ],
@@ -27,27 +27,29 @@
     "#Ex #1\n",
     "\n",
     "dict_1 = {'2018':20, '2019': 30, '2020': 17}\n",
+    "dict_2 = {'2018':100, '2019': 30, '2020': 70, '2021':60, '2022': 40}\n",
     "\n",
-    "def sumOfDictionaries(dict_1):\n",
+    "def sumOfValues(dict_1):\n",
     "    total = 0\n",
     "    for key, value in dict_1.items():\n",
     "        total += value\n",
+    "    #print(total)                           #for debugging\n",
     "    return total\n",
     "\n",
     "def book(dict_1):\n",
     "    dict_2 = {}\n",
     "    \n",
     "    for key, value in dict_1.items():\n",
-    "        dict_2[key] = value/sumOfDictionaries(dict_1)\n",
-    "                                  #value/total\n",
+    "        dict_2[key] = round(value/sumOfValues(dict_1) * 100, 1)     #value/total * 100 with 1 decimal point\n",
     "    return dict_2\n",
-    "print(sumOfDictionaries(dict_1))\n",
-    "print(book(dict_1))"
+    "\n",
+    "print(book(dict_1))\n",
+    "print(book(dict_2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -70,8 +72,10 @@
     "    area = 0\n",
     "    rows = M.shape[0]                               #shape[0] shows rows, shape[1] shows columns\n",
     "    for i in range(0, rows - 1):                    #-1 because stop at the row before the last row\n",
-    "        area += 0.5 * (M[i,0] * M[i + 1, 1] - M[i + 1,0] * M[i,1])\n",
-    "    area += 0.5 * (M[-1,0] * M[0,1] - M[0,0] * M[-1,1])\n",
+    "        area += 0.5 * (M[i,0] * M[i + 1, 1] - M[i + 1,0] * M[i,1])  \n",
+    "        #[i,0] row, first column; [i+1, 1] next row, second column; [i + 1,0] next row, first column; [i,1] row, second column \n",
+    "    area += 0.5 * (M[-1,0] * M[0,1] - M[-1,1] * M[0,0]) #last row\n",
+    "        #[-1, 0] last row, first column; [0,1 ] first row, second column; [-1,1] last row, second column; [0,0] first row, first column\n",
     "    return area\n",
     "\n",
     "print(area(M1))\n",
@@ -98,10 +102,11 @@
     "\n",
     "\n",
     "def reverse(input):\n",
-    "    string = \"\"\n",
+    "    string = \"\"                 #empty str string to put in converted \n",
     "    reverse = \"\"\n",
     "    if type(input) != str:\n",
     "        string = str(input)\n",
+    "    string = input\n",
     "    for i in range(len(string) - 1, -1, -1):\n",
     "        reverse += string[i]\n",
     "    return reverse\n",
