--- a/Example Problems/ExamSampleProblems.ipynb
+++ b/Example Problems/ExamSampleProblems.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -92,6 +92,7 @@
      "output_type": "stream",
      "text": [
       "854\n",
+      "olleh\n",
       "False\n"
      ]
     }
@@ -102,29 +103,32 @@
     "\n",
     "\n",
     "def reverse(input):\n",
-    "    string = \"\"                 #empty str string to put in converted \n",
-    "    reverse = \"\"\n",
-    "    if type(input) != str:\n",
-    "        string = str(input)\n",
-    "    string = input\n",
-    "    for i in range(len(string) - 1, -1, -1):\n",
+    "    string = \"\"                 #empty str string to put in converted string\n",
+    "    reverse = \"\"                #empty str reverse to put in reversed string\n",
+    "    if type(input) != str:      #if input is not str, convert to str        \n",
+    "        string = str(input)     #put in converted str into str string\n",
+    "    else:                       #if already str\n",
+    "        string = input          #put input in string\n",
+    "    for i in range(len(string) - 1, -1, -1):    #for i in range(last index(?), )\n",
     "        reverse += string[i]\n",
+    "    #print(len(string))\n",
     "    return reverse\n",
     "\n",
     "print(reverse(458))\n",
+    "print(reverse(str1))\n",
     "\n",
     "##Ex 4\n",
     "def check(input):\n",
     "    string = \"\"\n",
     "    \n",
-    "    if type(input) != str:\n",
+    "    if type(input) != str:              #if not str type\n",
     "        string = str(input)\n",
-    "    else: \n",
+    "    else:                               #if str type\n",
     "        string = input  \n",
-    "    string = string.lower()\n",
-    "    if(string == reverse(input)):\n",
+    "    string = string.lower()             # make everything lower case\n",
+    "    if(string == reverse(input)):       #if palindrome\n",
     "        return True\n",
-    "    else:   \n",
+    "    else:                               #if not palindrome\n",
     "        return False\n",
     "\n",
     "print(check(\"Madam\"))"
@@ -151,10 +155,10 @@
     "    root = a                    #intial guess\n",
     "\n",
     "    while e > tol:               #tol is given; 'at least 10 significant digits\n",
-    "        tmp = -(root ** n-a)/(n*root**(n-1))\n",
-    "        root += tmp                 \n",
-    "        e = abs(tmp/root)\n",
-    "        #print(e)               #for debugging\n",
+    "        tmp = -(root ** n-a)/(n*root**(n-1))            #new - previous\n",
+    "        root += tmp                                     #??\n",
+    "        e = abs(tmp/root)                               #now (new - prev)/new\n",
+    "        #print(e)                                       #for debugging\n",
     "        #print(root)\n",
     "    return root\n",
     "\n",
@@ -163,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -195,10 +199,6 @@
     "        return True\n",
     "    else:\n",
     "        return False\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "print(word_check_2(\"ABC\", \"abc\"))"
    ]
