--- a/Example Problems/ExamSampleProblems.ipynb
+++ b/Example Problems/ExamSampleProblems.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,8 @@
     "        string = str(input)     #put in converted str into str string\n",
     "    else:                       #if already str\n",
     "        string = input          #put input in string\n",
-    "    for i in range(len(string) - 1, -1, -1):    #for i in range(last index(?), )\n",
+    "    for i in range(len(string) - 1, -1, -1):    #for i in range(last index; need 0 but since ranges does +1 automatically, we just put -1; decrement of 1)\n",
+    "                                                #we put these numbers in string[], therefore we need numbers starting from the last index number to 0\n",
     "        reverse += string[i]\n",
     "    #print(len(string))\n",
     "    return reverse\n",
