--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -230,14 +230,25 @@
       "Three 3\n",
       "One 1\n",
       "Two 2\n",
-      "Three 3\n"
+      "Three 3\n",
+      "One 1\n",
+      "Two 2\n",
+      "Three 3\n",
+      "12\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "3\n",
+      "4\n",
+      "26\n"
      ]
     }
    ],
    "source": [
     "#For Loops\n",
     "\n",
-    "###Example #1\n",
+    "##Using specified Range; similar to for(;;)\n",
     "n = 0\n",
     "\n",
     "for i in range(1,4):\n",
@@ -245,41 +256,237 @@
     "\n",
     "print(n)\n",
     "\n",
-    "###Example #2\n",
-    "\n",
+    "##Using string as range; Sort of using like foreach\n",
     "for c in \"banana\":\n",
     "    print(c)\n",
     "\n",
     "\n",
-    "###Example #3\n",
-    "\n",
+    "##Using length of indices as range\n",
     "s = 'banana'\n",
     "for i in range(len(s)):\n",
     "    print(s[i])\n",
     "\n",
-    "###Example #4\n",
+    "##Iterating through dictionary using keys; sort of like foreach\n",
     "dict_a = {\"One\": 1, \"Two\": 2, \"Three\": 3}\n",
     "\n",
     "for key in dict_a.keys():                   #Looping through dictionary with keys\n",
     "    print(key, dict_a[key])\n",
     "\n",
-    "###Example #5\n",
+    "##Iterating through dictionary using keys and values\n",
     "for key, value in dict_a.items():           #Looping through dictionary with values\n",
+    "                                            #use items() to use both key and value\n",
     "    print(key, value)\n",
     "\n",
-    "###Example #6\n",
+    "##Iterating through 2 lists using zip function\n",
     "a = [\"One\", \"Two\", \"Three\"]\n",
     "b = [1,2,3]\n",
     "\n",
-    "for i, j in zip(a,b):"
+    "for i, j in zip(a,b):                       #using zip function to combine 2 lists into tuple\n",
+    "    print(i,j)\n",
+    "\n",
+    "##Adding all the elements in a list\n",
+    "s = 0\n",
+    "a = [2,3,1,3,3]\n",
+    "\n",
+    "for i in a:\n",
+    "    s += i\n",
+    "print(s)\n",
+    "\n",
+    "##Using break in for loop\n",
+    "for i in range(5):\n",
+    "    if i == 2:                              #when reaches 2, stop loop\n",
+    "        break\n",
+    "    print(i)\n",
+    "\n",
+    "##Using continue in for loop\n",
+    "for i in range(5):\n",
+    "    if i == 2:\n",
+    "        continue                            #skip code when i == 2\n",
+    "    print(i)\n",
+    "\n",
+    "##Using Nested For loops\n",
+    "x = np.array([[5,6], [7,8]])                #assign array in variable x\n",
+    "n, m = x.shape                              #put dimension in variables; n = x.shape[0] is row, m = x.shape[1] is column\n",
+    "s = 0                                       #initialize variable s; sum\n",
+    "for i in range(n):\n",
+    "    for j in range(m):                      ##adding columns first\n",
+    "        #print(s)\n",
+    "        s += x[i,j]                         #take the element with row i and column j and add\n",
+    "\n",
+    "print(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n = 0.5, i = 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#While Loop\n",
+    "\n",
+    "##Determining how many times a number can be divided by 2\n",
+    "i = 0                   #number of iterations\n",
+    "n = 8                   #number\n",
+    "\n",
+    "while n >= 1:\n",
+    "    n /= 2              #divide number by 2\n",
+    "    i += 1\n",
+    "\n",
+    "print(f'n = {n}, i = {i}')\n",
+    "\n",
+    "##Infinite loop\n",
+    "###Stop using ctrl + c or cmd + c\n",
+    "#n = 0\n",
+    "#while n > -1:\n",
+    "    #n += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16]\n",
+      "[0, 1, 4, 9, 16]\n",
+      "[0, 4, 16]\n",
+      "[0, 4, 16]\n",
+      "[0, 1, 1, 2, 2, 3, 3, 4, 4, 5]\n",
+      "[0, 1, 1, 2, 2, 3, 3, 4, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#List Comprehension\n",
+    "\n",
+    "##Storing number in list using for loop\n",
+    "y = []\n",
+    "\n",
+    "for i in range(5):                  #from 0 to 4\n",
+    "    y.append(i ** 2)                #number squared; append to list\n",
+    "print(y)                            #print final list\n",
+    "\n",
+    "##Storing number in list using list comprehenshion\n",
+    "y = [i ** 2 for i in range(5)]\n",
+    "print(y)\n",
+    "\n",
+    "##Conditions in list comprehension\n",
+    "y = [i ** 2 for i in x if i%2 == 0]\n",
+    "print(y)\n",
+    "\n",
+    "###Same as above \n",
+    "z = []\n",
+    "for i in range(5):\n",
+    "    if(i%2 == 0):\n",
+    "        z.append(i ** 2)\n",
+    "print(z)\n",
+    "\n",
+    "##Nested Loops using list\n",
+    "y = []\n",
+    "for i in range(5):                          #from 0 to 4\n",
+    "    for j in range(2):                      #from 0 to 1\n",
+    "        y.append(i + j)\n",
+    "print(y)\n",
+    "\n",
+    "                                            ### 0,0 0,1 1,0 1,1 2,0 2,1 3,0 3,1, etc\n",
+    "##Nest loops in list comprehension                    \n",
+    "y = [i + j for i in range(5) for j in range(2)]\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 8, 'c': 27}\n",
+      "{'a': 1, 'b': 8, 'c': 27}\n",
+      "{0, 1, 2}\n",
+      "{0, 1, 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Dictionary and Set Comprehension\n",
+    "\n",
+    "##Dictionary Comprehension\n",
+    "x = {'a': 1, 'b': 2,'c': 3}\n",
+    "x = {key: v ** 3 for (key,v) in x.items()}              #??\n",
+    "print(x)\n",
+    "\n",
+    "###Same as above\n",
+    "y = {'a': 1, 'b': 2,'c': 3}\n",
+    "for (key, v) in y.items():\n",
+    "   y[key] = v ** 3\n",
+    "print(y)\n",
+    "\n",
+    "##Set Comprehension\n",
+    "set_a = {i * j for i in range(2) for j in range(3)}\n",
+    "print(set_a)\n",
+    "\n",
+    "###Same as above\n",
+    "set_a = {}                                          #dictionary\n",
+    "set_a = set()                                       #make into set\n",
+    "for i in range(2):\n",
+    "    for j in range(3):\n",
+    "        set_a.add(i * j)\n",
+    "\n",
+    "print(set_a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1: square root of 49.000 = 13.250, approximate error = 0.849\n",
+      "Iteration 2: square root of 49.000 = 8.474, approximate error = 0.564\n",
+      "Iteration 3: square root of 49.000 = 7.128, approximate error = 0.189\n",
+      "Iteration 4: square root of 49.000 = 7.001, approximate error = 0.018\n",
+      "Iteration 5: square root of 49.000 = 7.000, approximate error = 0.000\n",
+      "Iteration 6: square root of 49.000 = 7.000, approximate error = 0.000\n",
+      "Square root of 49.000000 is 7.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Square Root Program using a while loop\n",
+    "##? don't understand\n",
+    "\n",
+    "a = 49\n",
+    "tol = 1e-5\n",
+    "e = 1\n",
+    "x = a/2\n",
+    "i = 1\n",
+    "\n",
+    "while e > tol:\n",
+    "    y = (x + a/x)/2\n",
+    "    e = abs((y-x)/y)\n",
+    "    x = y\n",
+    "    print(\"Iteration %d: square root of %.3f = %.3f, approximate error = %.3f\"%(i,a,x,e))\n",
+    "    i += 1\n",
+    "\n",
+    "print(\"Square root of %f is %f\"%(a,x))"
+   ]
   }
  ],
  "metadata": {
