--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -2,63 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.29 µs ± 19.8 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "6\n",
+      "6\n"
      ]
     }
    ],
    "source": [
+    "#Recursion\n",
+    "##Factorial Function in Recursive\n",
     "def recursiveFact(n):\n",
     "    if n ==1:\n",
     "        return 1\n",
     "    else: \n",
     "        return n * recursiveFact(n-1)\n",
     "\n",
-    "recursiveFact(3)\n",
+    "print(recursiveFact(3))\n",
     "\n",
-    "%timeit recursiveFact(50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.7 µs ± 2.19 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
+    "##%timeit recursiveFact(50)                         #for timing the function\n",
+    "\n",
+    "##Factiorial Function in Iteration\n",
     "def iterFact(n):\n",
     "    nFact = 1\n",
     "    for i in range(1, n+1):\n",
     "        nFact *= i\n",
     "    return nFact\n",
     "\n",
-    "iterFact(3)\n",
+    "print(iterFact(3))\n",
     "\n",
-    "%timeit iterFact(50)"
+    "##%timeit iterFact(50)                              #for timing the function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
+      "1\n",
       "2\n",
       "3\n",
       "5\n"
@@ -66,13 +57,16 @@
     }
    ],
    "source": [
+    "##Fibonacci Function\n",
     "def fib(n):\n",
-    "    if n == 1 or n == 2:\n",
+    "    if n == 1 or n == 2:                        #base case\n",
     "        return 1\n",
-    "    else:\n",
-    "        return fib(n-1) + fib(n-2)\n",
+    "    else:                                   \n",
+    "        return fib(n-1) + fib(n-2)              ##take the first two previous iterations\n",
     "\n",
     "\n",
+    "print(fib(1))\n",
+    "print(fib(2))\n",
     "print(fib(3))\n",
     "print(fib(4))\n",
     "print(fib(5))"
@@ -80,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,11 +92,17 @@
     }
    ],
    "source": [
-    "def tower(n, fromTower, toTower, altTower):\n",
-    "    if n !=0:\n",
+    "##Towers of Hanoi\n",
+    "###Displays the moves required to move a tower of size N from the 'fromTower' to the 'toTower'\n",
+    "###'fromTower', 'toTower' and 'altTower' are uniquely either 1,2, or 3 referring to tower1, tower2, tower3\n",
+    "\n",
+    "def tower(n, fromTower, toTower, altTower):                         #n = size of tower or # of disks, \n",
+    "    if n != 0:                                                      #if the size of the tower is not 0; if there is at least 1 disk\n",
+    "        #recursive call that moves n-1 stack from starting tower to alternate tower\n",
     "        tower(n-1, fromTower, altTower, toTower)\n",
     "        print(\"Move disk %d from tower %d to tower %d\" \\\n",
     "            %(n, fromTower, toTower))\n",
+    "        #recursive call that moves n-1 stack from alternate tower to final tower\n",
     "        tower(n-1, altTower, toTower, fromTower)\n",
     "\n",
     "tower(3,1,3,2)"
